[package]
name = "anew"
version = "0.1.0"
authors = ["z3r0yu <zeroyu@protonmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/zer0yu/anew"
repository = "https://github.com/zer0yu/anew"
description = "A tool for adding new lines to files, skipping duplicates and write in Rust!"
categories = ["command-line-utilities"]
keywords = ["security", "web", "de-duplication"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
indexmap = "2.1.0"
